# aws-sso-cfn-helper

./: .gitignore  README.md  example.ini  pyproject.toml
aws_sso_cfn_helper/: lookup.py  template.py
